--- a/src/main/resources/assets/mredstones/lang/en_us.json
+++ b/src/main/resources/assets/mredstones/lang/en_us.json
@@ -15,5 +15,5 @@
   "item.mredstones.compressed_armor_boots": "Compressed Boots",
   "item.mredstones.tiny_redstone_pickaxe": "Tiny Redstone Pickaxe",
   "item.mredstones.compressed_armor_chestplate": "Compressed Chestplate",
-  "block.mredstones.compresser": "Compresser"
+  "block.mredstones.compresser": "Compressor"
 }
