--- a/src/main/resources/assets/mredstones/lang/hu_hu.json
+++ b/src/main/resources/assets/mredstones/lang/hu_hu.json
@@ -15,5 +15,5 @@
   "item.mredstones.compressed_armor_boots": "Tömörített Redstone cipő",
   "item.mredstones.tiny_redstone_pickaxe": "Kicsi Redstone Csákány",
   "item.mredstones.compressed_armor_chestplate": "Tömörített Redstone Mellvért",
-  "block.mredstones.compresser": "Compresser"
+  "block.mredstones.compresser": "Kompresszor"
 }
