--- a/src/main/resources/assets/mredstones/lang/en_us.json
+++ b/src/main/resources/assets/mredstones/lang/en_us.json
@@ -1,19 +1,20 @@
 {
   "block.mredstones.compressed_redstone_block": "Compressed Redstone Block",
   "item.frrr.tiny_redstone_piece": "Redstone Piece",
+  "item.mredstones.deactivated_redstone_armor_armor_chestplate": "DeactivatedRedstoneArmor Chestplate",
   "item.mredstones.redstone_pig_spawn_egg": "Nightly Redstone Pig Spawn Egg",
   "item.mredstones.compressor_head": "Compressor Head",
   "item.mredstones.wooden_gear": "Wooden Gear",
-  "item.mredstones.compressed_armor_helmet": "Compressed Helmet",
-  "item.mredstones.compressed_armor_leggings": "Compressed Leggings",
+  "item.mredstones.deactivated_redstone_armor_armor_boots": "DeactivatedRedstoneArmor Boots",
   "item.mredstones.redstone_pickaxe": "Redstone Pickaxe",
   "item.frrr.tiny_redstone_pickaxe": "Tiny Redstone Pickaxe",
+  "item.mredstones.deactivated_redstone_armor_armor_helmet": "DeactivatedRedstoneArmor Helmet",
   "itemGroup.tabmore_redstone_stuffs": "More Redstone Stuffs",
   "item.mredstones.tiny_redstone_piece": "Tiny Redstone Piece",
   "entity.mredstones.redstone_pig": "Nightly Redstone Pig",
   "block.mredstones.double_compressed_redstone": "Double Compressed Redstone",
-  "item.mredstones.compressed_armor_boots": "Compressed Boots",
+  "item.mredstones.deactivated_redstone_armor_armor_leggings": "DeactivatedRedstoneArmor Leggings",
   "item.mredstones.tiny_redstone_pickaxe": "Tiny Redstone Pickaxe",
-  "item.mredstones.compressed_armor_chestplate": "Compressed Chestplate",
+  "item.mredstones.deactivated_redstone": "Deactivated Redstone",
   "block.mredstones.compresser": "Compressor"
 }
